--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="stylesheet" href="./global.css" />
+    <!-- <link rel="stylesheet" href="./global.css" /> -->
     <link rel="stylesheet" href="./index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=American Captain:wght@400&display=swap"
-    />
+    <!-- <link href="https://fonts.cdnfonts.com/css/american-captain-2" rel="stylesheet"> -->
+<link href="https://db.onlinewebfonts.com/c/a6bec1c4ef2d2fd1bac5a6951f5f32a3?family=American+Captain" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header"></header>
+    <header class="main-header">
+      <div class="left-box"><a href="/"><img src="./public/bombx-logo@2x.png" alt="bomb-x logo"></a></div>
+      <div class="right-box"><a class="login-btn">BUY TOKEN</a> </div>
+    </header>
+
+    <section class="hero-section">
+      <div class="bg-img">
+        <img src="./public/star-page-3@2x.png" alt="background image">
+      </div>
+      <div class="bg-img-2">
+        <p class="bg-text-large">BOMBX</p>
+        <img src="./public/imageremovebg-1@2x.png" alt="background image">
+        <div class="btns">
+          <button class="cta-1-btn">
+            DEXTOOLS
+          </button>
+
+          <div class="btn-wrapper">
+            <p>7YDWWSCMKWG.........BUM4OTVQZYUPZ2P</p>
+            <button>COPY</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
