--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <!-- <link rel="stylesheet" href="./global.css" /> -->
     <link rel="stylesheet" href="./index.css" />
     <!-- <link href="https://fonts.cdnfonts.com/css/american-captain-2" rel="stylesheet"> -->
-<link href="https://db.onlinewebfonts.com/c/a6bec1c4ef2d2fd1bac5a6951f5f32a3?family=American+Captain" rel="stylesheet">
+<link href="https://db.onlineweb  fonts.com/c/a6bec1c4ef2d2fd1bac5a6951f5f32a3?family=American+Captain" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="left-box"><a href="/"><img src="./public/bombx-logo@2x.png" alt="bomb-x logo"></a></div>
-      <div class="right-box"><a class="login-btn">BUY TOKEN</a> </div>
+      <div class="right-box"><a class="login-btn glow-on-hover  ">BUY TOKEN</a> </div>
     </header>
 
     <section class="hero-section">
